--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen       8080;
+    listen       80;
     server_name  localhost;
 
     #charset koi8-r;
@@ -11,6 +11,10 @@ server {
         autoindex on;
         autoindex_exact_size off;
         autoindex_localtime on;
+    }
+
+    location /upload {
+        proxy_pass  http://127.0.0.1:8080/
     }
 
 }
