--- a/default.conf
+++ b/default.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location /upload {
-        proxy_pass  http://127.0.0.1:8080/
+        proxy_pass  http://127.0.0.1:8080/;
     }
 
 }
